<resources>
    <string name="app_name">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tvshow">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="search_here">Search Here</string>
    <string name="discover">Discover</string>
    <string name="view_all">View all</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_data">Not found</string>
    <string name="airing_today">Tv Airing Today</string>
    <string name="on_the_air">Tv On The Air</string>
    <string name="release_date">Release Date</string>
    <string name="runtime">Runtime</string>
    <string name="overview">Overview</string>
    <string name="first_air_date">First air date</string>
    <string name="no_tagline">No Tagline</string>
    <string name="last_air_date">Last air date</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="discover_movie">Discover Movie</string>
    <string name="now_playing_movie">Now Playing Movie</string>
    <string name="upcoming_movie">Upcoming Movie</string>
    <string name="discover_tv">Discover Tv Show</string>
    <string name="title_favorite">Favorite</string>
</resources>