...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="10dp"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/title_tv"
        style="@style/Theme.MovieCatalogue.Text.Medium16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
...
        android:text="@string/runtime"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="@+id/title_tv"
        app:layout_constraintTop_toBottomOf="@+id/label_last_tv" />

    <TextView
        android:id="@+id/first_date_tv"
        style="@style/Theme.MovieCatalogue.Text.Regular14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/label_first_date_tv"
        app:layout_constraintEnd_toEndOf="@+id/title_tv"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
...
