<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/selector_movie"
        app:showAsAction="withText"
        android:title="@string/movie"/>

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/selector_tvshow"
        app:showAsAction="withText"
        android:title="@string/tvshow"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/selector_favorite"
        app:showAsAction="withText"
        android:title="@string/favorite"/>
</menu>